--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@inertiajs/react": "^1.0.2"
+        "@inertiajs/react": "^1.0.2",
+        "moment": "^2.29.4",
+        "react-toastify": "^9.1.1"
     }
 }
